--- a/index.html
+++ b/index.html
@@ -45,6 +45,6 @@
             <div id="not-found-message">Pokemon not found</div>
         </section>
     </main>
-    <script src="pokemon.js"></script>
+    <script src="pokemon.js" defer></script>
 </body>
 </html>
