--- a/detail.html
+++ b/detail.html
@@ -4,7 +4,8 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Pokemon Detail</title>
-    <script src="./pokemon-detail.js" defer></script>
+    <link rel="stylesheet" href="style.css">
+    
   </head>
   <body>
     <main class="detail-main main">
@@ -92,5 +93,6 @@
       </div>
       <img src="./assets/pokedex.svg" alt="pokedex" class="detail-bg" />
     </main>
+    <script src="./pokemon-detail.js" defer></script>
   </body>
 </html>
