--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Pokedex
     </title>
-    <link rel="stylesheet" href="style.css" />
+    <link rel="stylesheet" href="css/style.css" />
 
 </head>
 
@@ -52,7 +52,8 @@
             <div id="not-found-message">Pokemon not found</div>
         </section>
     </main>
-    <script src="pokemon.js" defer></script>
+    <script src="js/pokemon.js"></script>
+    <script src="js/search.js" defer></script>
 </body>
 
 </html>
