--- a/index.html
+++ b/index.html
@@ -52,8 +52,8 @@
             <div id="not-found-message">Pokemon not found</div>
         </section>
     </main>
-    <script src="js/pokemon.js"></script>
-    <script src="js/search.js" defer></script>
+    <script src="js/search.js"></script>
+    <script src="js/pokemon.js" defer></script>
 </body>
 
 </html>
