--- a/index.html
+++ b/index.html
@@ -52,6 +52,7 @@
             <div id="not-found-message">Pokemon not found</div>
         </section>
     </main>
+    <script src="detail.html"></script>
     <script src="js/search.js"></script>
     <script src="js/pokemon.js" defer></script>
 </body>
