--- a/detail.html
+++ b/detail.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Pokemon Detail</title>
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="css/style.css">
     
   </head>
   <body>
@@ -93,6 +93,6 @@
       </div>
       <img src="./assets/pokedex.svg" alt="pokedex" class="detail-bg" />
     </main>
-    <script src="./pokemon-detail.js" defer></script>
+    <script src="js/pokemon-detail.js"></script>
   </body>
 </html>
